[tool.poetry]
name = "datasetter"
version = "0.1.0"
description = ""
authors = ["Alex Bradner <alex@bradner.net>"]

[tool.poetry.dependencies]
python = "^3.9"
algoliasearch = ">=2.0,<3.0"
snowflake-connector-python = "^2.4.6"
pandas = "^1.2.5"
Geohash = "^1.0"
proximityhash = "^1.0.1"
argparse = "^1.4.0"
astropy = "^4.2.1"
pydantic = "^1.8.2"
jupyterlab = "^3.0.16"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
